# gildedrosecpp

./: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
test/: CMakeLists.txt  GildedRose.cpp  GildedRoseTest.cpp  Person.h  test.cpp
